# wavescout

./: .gitignore  README.md  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: codeql.yml  pytest.yml  release.yml
tests/: test_audio_slicer.py
wavescout/: wavescout.py
